--- a/ftt/localisation/ftt_titles.csv
+++ b/ftt/localisation/ftt_titles.csv
@@ -430,7 +430,7 @@ k_mercia;Mercia;Mercie;Mercia;;Mercia;;;;;;;;;x;
 k_mercia_adj;Mercian;Mercien;Mercianisch;;Merciana;;;;;;;;;x;
 k_moravia;Great Moravia;Grande Moravie;Groﬂm‰hren;;Gran Moravia;;;;;;;;;x;
 k_moravia_adj;Moravian;Morave;Groﬂm‰hrischer;;Moravia;;;;;;;;;x;
-k_morea;the Morea;la MorÈe;der Morea;;los Morea;;;;;;;;;x;
+k_morea;Morea;Morea;Morea;;Morea;;;;;;;;;x;
 k_morea_adj;Morean;Morean;Morean;;Morean;;;;;;;;;x;
 k_morocco;Morocco;Maroc;Marokko;;;;;;;;;;;x;
 k_morocco_adj;Moroccan;Marocain;Marokkanisch;;;;;;;;;;;x;
