--- a/ftt/localisation/ftt_titles.csv
+++ b/ftt/localisation/ftt_titles.csv
@@ -269,6 +269,8 @@ e_serbia;Serbian Empire;Empire Serbe;Serbisches Kaiserreich;;;;;;;;;;;x;
 e_serbia_adj;Serbian;Serbe;Serbisch;;;;;;;;;;;x;
 e_sicily;Sicilian Empire;Empire Sicilien;Sizilianisches Kaiserreich;;;;;;;;;;;x;
 e_sicily_adj;Sicilian;Sicilien;Sizilianisch;;;;;;;;;;;x;
+e_slavic;Slavic Empire;Slavic Empire;Slavic Empire;;Slavic Empire;;;;;;;;;;
+e_slavic_ajc;Slavic;Slavic;Slavic;;Slavic;;;;;;;;;;
 e_songhai;Songhai;Songhai;Songhai;;Songhai;;;;;;;;;;
 e_songhai_adj;Songhai;Songhai;Songhai;;Songhai;;;;;;;;;;
 e_spain;Spanish Empire;Empire Espagnol;Spanisches Kaiserreich;;;;;;;;;;;x;
@@ -332,6 +334,8 @@ k_antioch;Antioch;Antioche;Antioch;;Antioquía;;;;;;;;;x;
 k_antioch_adj;Antiochian;Antiochienne;Antiocher;;Antioquena;;;;;;;;;x;
 k_asturias;Asturias;Asturias;Asturien;;Asturias;;;;;;;;;x;
 k_asturias_adj;Asturian;Asturies;Asturischer;;Asturiano;;;;;;;;;x;
+k_athenai;Athenai;Athenai;Athenai;;Athenai;;;;;;;;;;
+k_athenai_adj;Athenian;Athenian;Athenian;;Athenian;;;;;;;;;;
 k_austria;Austria;Autriche;Österreich;;Austria;;;;;;;;;x;
 k_austria_adj;Austrian;autrichien;Österreichischer;;Austriaco;;;;;;;;;x;
 k_avalon;Avalon;Avalon;Avalon;;Avalon;;;;;;;;;x;
