--- a/ftt/localisation/ftt_titles.csv
+++ b/ftt/localisation/ftt_titles.csv
@@ -13,11 +13,11 @@ EVTDESC_upg.1;We have finally broken the bonds of vassalage to our old liege. I 
 EVTDESC_upg.2;We have finally broken the bonds of vassalage to our old liege. I have convened with my council and the lords of the realm and they are all in agreement that I must officially renounce my bonds with my old liege by declaring the founding of the Kingdom of Luxembourg.;We have finally broken the bonds of vassalage to our old liege. I have convened with my council and the lords of the realm and they are all in agreement that I must officially renounce my bonds with my old liege by declaring the founding of the Kingdom of Luxembourg.;Endlich haben wir die Fesseln der Knechtschaft unserer alten Lehnsherrn gebrochen. Ich habe mit meinem Rat und den Herren des Reiches berief, und sie stimmen alle darin überein, dass ich offiziell meine Fesseln mit meinem alten Lehnsherrn entsagen muss indem ich die Gründung des Königreichs Luxembourgs erkläre.;;We have finally broken the bonds of vassalage to our old liege. I have convened with my council and the lords of the realm and they are all in agreement that I must officially renounce my bonds with my old liege by declaring the founding of the Kingdom of Luxembourg.;;;;;;;;;x;
 EVTOPTA_upg;Let it be so.;Qu'il en soit ainsi.;Lasst es so sein.;;Que así sea.;;;;;;;;;x;
 EVTTITLE_upg;The Birth of a Kingdom;La Naissance d'un Royaume;Die Geburt eines Königreichs;;El Nacimiento de un Reino;;;;;;;;;x;
-e_breton;Breton Empire;Empire Breton;Bretonisches Kaiserreich;;;;;;;;;;;x;
-e_breton_adj;Breton;Breton;Bretonisch;;;;;;;;;;;x;
+e_breton;Breton Empire;Empire Breton;Bretonisches Kaiserreich;;Breton Empire;;;;;;;;;x;
+e_breton_adj;Breton;Breton;Bretonisch;;Breton;;;;;;;;;x;
 e_carthage;Carthaginian Empire;l'Empire Carthaginoise;Karthagisches Kaiserreich;;Imperio Cartaginesa;;;;;;;;;x;
 e_carthage_adj;Carthaginian;Carthaginois;Karthagischer;;Cartaginés;;;;;;;;;x;
-e_celtic;Celtic Empire;l'Empire Celtique;Keltisches Kaiserreich;Imperio de Celta;;;;;;;;;;x;
+e_celtic;Celtic Empire;l'Empire Celtique;Keltisches Kaiserreich;;Imperio de Celta;;;;;;;;;x;
 e_celtic_adj;Celtic;Celtique;Keltisches;;Céltico;;;;;;;;;x;
 e_common;Polish-Lithuanian Commonwealth;Polish-Lithuanian Commonwealth;Polish-Lithuanian Commonwealth;;Polish-Lithuanian Commonwealth;;;;;;;;;;
 e_common_adj;Commonwealth;Commonwealth;Commonwealth;;Commonwealth;;;;;;;;;;
@@ -29,16 +29,16 @@ e_gaul;Gallic Empire;l'Empire Gaulois;Gallisches Kaiserreich;;Imperio Galo;;;;;;
 e_gaul_adj;Gallic;Gaulois;Gallischer;;Galo;;;;;;;;;x;
 e_jewish;Jewish Empire;Jewish Empire;Jewish Empire;;Jewish Empire;;;;;;;;;;
 e_jewish_adj;Jewish;Jewish;Jewish;;Jewish;;;;;;;;;;
-e_maghreb;Maghreb Empire;Empire Maghrébin;Maghrebinisches Kaiserreich;;;;;;;;;;;x;
-e_maghreb_adj;Maghreb;Maghrébin;Maghrebinisch;;;;;;;;;;;x;
-e_norman;Norman Empire;Empire Normand;Normannisches Kaiserreich;;;;;;;;;;;x;
-e_norman_adj;Norman;Normand;Normannisch;;;;;;;;;;;x;
-e_north_sea;North Sea Empire;Empire de la Mer du Nord;Nordseekaiserreich;;;;;;;;;;;x;
-e_north_sea_adj;North Sea;Mer du Nord;Nordseeisch;;;;;;;;;;;x;
-e_outremer;Outremer Empire;Empire d'Outre-mer;Kreuzfahrerkaiserreich;;;;;;;;;;;x;
-e_outremer_adj;Outremer;Ultramarin;Outremerisch;;;;;;;;;;;x;
-e_romania;Romanian Empire;Empire Roumain;Rumänisches Kaiserreich;;;;;;;;;;;x;
-e_romania_adj;Romanian;Roumain;Rumänisch;;;;;;;;;;;x;
+e_maghreb;Maghreb Empire;Empire Maghrébin;Maghrebinisches Kaiserreich;;Maghreb Empire;;;;;;;;;x;
+e_maghreb_adj;Maghreb;Maghrébin;Maghrebinisch;;Maghreb;;;;;;;;;x;
+e_norman;Norman Empire;Empire Normand;Normannisches Kaiserreich;;Norman Empire;;;;;;;;;x;
+e_norman_adj;Norman;Normand;Normannisch;;Norman;;;;;;;;;x;
+e_north_sea;North Sea Empire;Empire de la Mer du Nord;Nordseekaiserreich;;North Sea Empire;;;;;;;;;x;
+e_north_sea_adj;North Sea;Mer du Nord;Nordseeisch;;North Sea;;;;;;;;;x;
+e_outremer;Outremer Empire;Empire d'Outre-mer;Kreuzfahrerkaiserreich;;Outremer Empire;;;;;;;;;x;
+e_outremer_adj;Outremer;Ultramarin;Outremerisch;;Outremer;;;;;;;;;x;
+e_romania;Romanian Empire;Empire Roumain;Rumänisches Kaiserreich;;Romanian Empire;;;;;;;;;x;
+e_romania_adj;Romanian;Roumain;Rumänisch;;Romanian;;;;;;;;;x;
 e_seleucid;Seleucid Empire;Seleucid Empire;Seleucid Empire;;Seleucid Empire;;;;;;;;;;
 e_seleucid_adj;Seleucid;Seleucid;Seleucid;;Seleucid;;;;;;;;;;
 e_slavic;Slavic Empire;Slavic Empire;Slavic Empire;;Slavic Empire;;;;;;;;;;
@@ -68,6 +68,8 @@ k_athenai;Athenai;Athenai;Athenai;;Athenai;;;;;;;;;;
 k_athenai_adj;Athenian;Athenian;Athenian;;Athenian;;;;;;;;;;
 k_austria;Austria;Autriche;Österreich;;Austria;;;;;;;;;x;
 k_austria_adj;Austrian;autrichien;Österreichischer;;Austriaco;;;;;;;;;x;
+k_babylon;Babylon;Babylon;Babylon;;Babylon;;;;;;;;;;
+k_babylon_adj;Babylonian;Babylonian;Babylonian;;Babylonian;;;;;;;;;;
 k_badawi;Badawi Arabia;Arabie Badawite;Badawi-Arabien;;Arabia Badawia;;;;;;;;;x;
 k_badawi_adj;Badawi;Badawien;Badawisch;;Badawia;;;;;;;;;x;
 k_bahrain;Bahrain;Bahraïn;Bahrain;;Bahrain;;;;;;;;;x;
@@ -104,7 +106,7 @@ k_mercia;Mercia;Mercie;Mercia;;Mercia;;;;;;;;;x;
 k_mercia_adj;Mercian;Mercien;Mercianisch;;Merciana;;;;;;;;;x;
 k_morea;Morea;Morea;Morea;;Morea;;;;;;;;;x;
 k_morea_adj;Morean;Morean;Morean;;Morean;;;;;;;;;x;
-k_roma;Rome;Rome;Rome;Rome;;;;;;;;;;x;
+k_roma;Rome;Rome;Rome;;Rome;;;;;;;;;x;
 k_romania;Romania;Roumanie;Rumänien;;Rumania;;;;;;;;;x;
 k_romania_adj;Romanian;Roumain;Rumänischer;;Rumano;;;;;;;;;x;
 k_roma_adj;Roman;Romaine;Römischer;;Romano;;;;;;;;;x;
