--- a/ftt/localisation/ftt_titles.csv
+++ b/ftt/localisation/ftt_titles.csv
@@ -106,6 +106,8 @@ k_mercia;Mercia;Mercie;Mercia;;Mercia;;;;;;;;;x;
 k_mercia_adj;Mercian;Mercien;Mercianisch;;Merciana;;;;;;;;;x;
 k_morea;Morea;Morea;Morea;;Morea;;;;;;;;;x;
 k_morea_adj;Morean;Morean;Morean;;Morean;;;;;;;;;x;
+k_morocco;Morocco;Maroc;Marokko;;Morocco;;;;;;;;;x;
+k_morocco_adj;Moroccan;Marocain;Marokkanisch;;Moroccan;;;;;;;;;x;
 k_roma;Rome;Rome;Rome;;Rome;;;;;;;;;x;
 k_romania;Romania;Roumanie;Rumänien;;Rumania;;;;;;;;;x;
 k_romania_adj;Romanian;Roumain;Rumänischer;;Rumano;;;;;;;;;x;
