--- a/ftt/localisation/ftt_titles.csv
+++ b/ftt/localisation/ftt_titles.csv
@@ -131,6 +131,8 @@ k_yugoslavia_adj;Yugoslavian;Yougoslave;Jugoslawischer;;Yugoslavo;;;;;;;;;x;
 MARQUIS;Marquess;Marquis;Marquis;;Marqués;;;;;;;;;x;
 MARQUISE;Marquise;Marquise;Marquise;;Marquesa;;;;;;;;;x;
 MARQUIS_OF;March of;Mars de;März des;;De marzo de;;;;;;;;;x;
+No;No;No;No;;No;;;;;;;;;;
 PADISHAH;Great Sultan;Grande Sultan;Großsultan;;Gran Sultán;;;;;;;;;x;
 title_queen_mother_judaism;Malcah Ama;Malcah Ama;Malcah Ama;;Malcah Ama;;;;;;;;;x;
 UNIFIED_TRIBES_OF;Unified Tribes of;Tribus unifiées de;Vereinigte Stämme der Sami;;Tribus de Unificadas de;;;;;;;;;x;
+Yes;Yes;Yes;Yes;;Yes;;;;;;;;;;
