--- a/ftt/localisation/ftt_titles.csv
+++ b/ftt/localisation/ftt_titles.csv
@@ -42,7 +42,7 @@ e_romania_adj;Romanian;Roumain;Rum‰nisch;;Romanian;;;;;;;;;x;
 e_seleucid;Seleucid Empire;Seleucid Empire;Seleucid Empire;;Seleucid Empire;;;;;;;;;;
 e_seleucid_adj;Seleucid;Seleucid;Seleucid;;Seleucid;;;;;;;;;;
 e_slavic;Slavic Empire;Slavic Empire;Slavic Empire;;Slavic Empire;;;;;;;;;;
-e_slavic_ajc;Slavic;Slavic;Slavic;;Slavic;;;;;;;;;;
+e_slavic_adj;Slavic;Slavic;Slavic;;Slavic;;;;;;;;;;
 ftt_ai;Toggle AI Interaction with FTT;Toggle AI Interaction with FTT;Toggle AI Interaction with FTT;;Toggle AI Interaction with FTT;;;;;;;;;;
 ftt_ai_desc;Decide if the AI can or cannot create FTT related titles.;Decide if the AI can or cannot create FTT related titles.;Decide if the AI can or cannot create FTT related titles.;;Decide if the AI can or cannot create FTT related titles.;;;;;;;;;;
 GRANDDUCHESS;Grand Duchess;Grande-Duchesse;Groﬂherzogin;;Gran Duquesa;;;;;;;;;x;
